scroll fix, dark mode enhancements

--- a/frontend/src/components/Worksheet/WorksheetCalendarListItem.module.css
+++ b/frontend/src/components/Worksheet/WorksheetCalendarListItem.module.css
@@ -52,6 +52,10 @@
   color: var(--color-text-tertiary);
 }
 
+.courseCodeHidden .courseLocation {
+  color: var(--color-hidden);
+}
+
 .courseCode {
   text-align: left;
   overflow: hidden;
